--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <button onclick="showPDF('beshinchi.pdf')">13-M.pdf</button>
             <button onclick="showPDF('oltinchi.pdf')">14-M.pdf</button>
             <button onclick="showPDF('yettinchi.pdf')">15-M.pdf</button>
-            <button onclick="showImage()">Ehtimol</button>
+            <button onclick="showImage()">Ehtimol.jpg</button>
         </div>
         
         <div id="content">
