--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <h1>PDF va Rasm Ko'rish Tizimi</h1>
         
         <div class="buttons">
-            <button onclick="showPDF('birinchi.pdf')">9-M.pdf</button>
-            <button onclick="showPDF('ikkinchi.pdf')">10-M.pdf</button>
-            <button onclick="showPDF('uchinchi.pdf')">11-M.pdf</button>
-            <button onclick="showPDF('tortinchi.pdf')">12-M.pdf</button>
-            <button onclick="showPDF('beshinchi.pdf')">13-M.pdf</button>
-            <button onclick="showPDF('oltinchi.pdf')">14-M.pdf</button>
-            <button onclick="showPDF('yettinchi.pdf')">15-M.pdf</button>
-            <button onclick="showImage()">Ehtimol.jpg</button>
+            <button onclick="showPDF('birinchi.pdf')">9-M</button>
+            <button onclick="showPDF('ikkinchi.pdf')">10-M</button>
+            <button onclick="showPDF('uchinchi.pdf')">11-M</button>
+            <button onclick="showPDF('tortinchi.pdf')">12-M</button>
+            <button onclick="showPDF('beshinchi.pdf')">13-M</button>
+            <button onclick="showPDF('oltinchi.pdf')">14-M</button>
+            <button onclick="showPDF('yettinchi.pdf')">15-M</button>
+            <button onclick="showImage()">Ehtimol</button>
         </div>
         
         <div id="content">
