--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <h1>PDF va Rasm Ko'rish Tizimi</h1>
         
         <div class="buttons">
-            <button onclick="showPDF('9-M')">9-M</button>
-            <button onclick="showPDF('10-M')">10-M</button>
-            <button onclick="showPDF('11-M')">11-M</button>
-            <button onclick="showPDF('12-M')">12-M</button>
-            <button onclick="showPDF('13-M')">13-M</button>
-            <button onclick="showPDF('14-M')">14-M</button>
+            <button onclick="showPDF('9-M.pdf')">9-M</button>
+            <button onclick="showPDF('10-M.pdf')">10-M</button>
+            <button onclick="showPDF('11-M.pdf')">11-M</button>
+            <button onclick="showPDF('12-M.pdf')">12-M</button>
+            <button onclick="showPDF('13-M.pdf')">13-M</button>
+            <button onclick="showPDF('14-M.pdf')">14-M</button>
             <button onclick="showPDF('15-M.pdf')">15-M</button>
             <button onclick="showImage('Ehtimol.jpg')">Ehtimol</button>
         </div>
