--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1>PDF va Rasm Ko'rish Tizimi</h1>
         
         <div class="buttons">
-            <button onclick="showPDF('9-M.pdf')">9-M</button>
+            <button onclick="showPDF('9-m.pdf')">9-M</button>
             <button onclick="showPDF('10-M.pdf')">10-M</button>
             <button onclick="showPDF('11-M.pdf')">11-M</button>
             <button onclick="showPDF('12-M.pdf')">12-M</button>
