--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             <button onclick="showPDF('13-M.pdf')">13-M</button>
             <button onclick="showPDF('14-M.pdf')">14-M</button>
             <button onclick="showPDF('15-M.pdf')">15-M</button>
+            <button onclick="showPDF('baza.pdf')">Baza</button>
             <button onclick="showPDF('Ehtimol.jpg')">Ehtimol</button>
+            
         </div>
         
         <div id="content">
